--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,220 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-
-body{
-    margin: 0;
-    font-family: 'poppins', sans-serif;
-    width: 100%;
-    max-width: 90%;
-    margin: 0 auto;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+body {
+  margin: 0;
+  font-family: "poppins", sans-serif;
+  width: 100%;
+  max-width: 90%;
+  margin: 0 auto;
 }
 
-.container{
-    margin: 8px 0;
-    font-size: 0.8em;
-    font-weight: 600;
+.container {
+  margin: 8px 0;
+}
+.container .profile {
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 0.8em;
+  font-weight: 600;
+}
+.container .profile #profile__img {
+  border: 5px solid #fff;
+  border-radius: 50px;
+  background: url(./Device=Web\,State=Default.svg) no-repeat;
+}
+.container .profile #profile__img:hover {
+  background: url(./Device=Web\,State=Hover.svg) no-repeat;
+}
+.container .profile #profile__img:focus {
+  border: 5px solid rgb(224, 221, 221);
+}
+.container .profile .avatar_mobile {
+  position: absolute;
+  right: 25px;
+  top: 40px;
+}
+.container .profile .avatar_web {
+  display: none;
+}
+.container .profile p {
+  font-weight: bolder;
+  font-size: 1.1em;
+}
+.container .links a {
+  display: block;
+  color: #000;
+  background: #eeecec;
+  text-decoration: none;
+  margin: 15px;
+  text-align: center;
+  padding: 20px;
+  border-radius: 5px;
+  font-size: 0.8em;
+  font-weight: 600;
+}
+.container .links a:hover {
+  background: rgba(238, 236, 236, 0.8);
+}
+.container .socials {
+  text-align: center;
+  margin: 3em 0;
+}
+.container .socials a {
+  padding: 0 10px;
+}
+.container .Footer {
+  margin: 8em 0 2.5em 0;
+  padding: 25px 0 0 15px;
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
+}
+.container .Footer p {
+  opacity: 0.5;
+  font-weight: 600;
+}
+.container .Contact {
+  padding: 20px 0 0 0;
+}
+.container .Contact h1 {
+  font-size: 2.4em;
+  font-weight: 600;
+}
+.container .Contact p {
+  font-size: 1.08em;
+  opacity: 0.8;
+  padding-bottom: 2em;
+}
+.container .Contact form label {
+  display: block;
+  font-size: 0.9em;
+  font-weight: 600;
+  opacity: 0.9;
+  padding-bottom: 7px;
+}
+.container .Contact form input {
+  margin-bottom: 18px;
+  padding: 10px;
+  width: 98%;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+  outline: none;
+}
+.container .Contact form input:focus {
+  border: 1px solid #007af3;
+}
+.container .Contact form input:invalid {
+  border: 1px solid red;
+}
+.container .Contact form textarea {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+  outline: none;
+  resize: none;
+}
+.container .Contact form textarea:focus {
+  border: 1px solid #007af3;
+}
+.container .Contact form ::-moz-placeholder {
+  font-size: 1.1em;
+}
+.container .Contact form :-ms-input-placeholder {
+  font-size: 1.1em;
+}
+.container .Contact form ::placeholder {
+  font-size: 1.1em;
+}
+.container .Contact form ::-ms-input-placeholder {
+  font-size: 1.1em;
+}
+.container .Contact form #lab {
+  display: flex;
+  align-items: baseline;
+  padding: 15px 0;
+  position: relative;
+}
+.container .Contact form #lab input[type=checkbox] {
+  width: auto;
+  margin-right: 10px;
+  cursor: pointer;
+  z-index: 1;
+  opacity: 0;
+}
+.container .Contact form #lab input[type=checkbox]:checked ~ .custom_check {
+  border: 1px solid #007af3;
+}
+.container .Contact form #lab input[type=checkbox]:checked ~ .custom_check:after {
+  display: block;
+}
+.container .Contact form #lab label {
+  font-weight: 500;
+  font-size: 1em;
+}
+.container .Contact form #lab .custom_check {
+  position: absolute;
+  left: 3px;
+  top: 19px;
+  width: 13px;
+  height: 13px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 3px;
+}
+.container .Contact form #lab .custom_check:after {
+  content: "";
+  position: absolute;
+  display: none;
+  left: 4px;
+  top: 1px;
+  width: 3px;
+  height: 7px;
+  border: solid #007af3;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+.container .Contact form button {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  background: #007af3;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 1em;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.container .Contact form button:hover {
+  background: rgba(0, 122, 243, 0.7);
 }
 
-.profile{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#profile__img{
-    border: 5px solid #fff;
-    border-radius: 50px;
-    background: url(./Device=Web\,State=Default.svg) no-repeat;
-}
-
-#profile__img:hover{
-    background: url(./Device=Web\,State=Hover.svg) no-repeat;
-}
-
-#profile__img:focus{
-    border: 5px solid rgb(224, 221, 221);
-}
-
-p{
-    font-weight: bolder;
-    font-size: 1.1em;
-}
-
-.links a{
+@media screen and (min-width: 900px) {
+  .container .profile .avatar_web {
     display: block;
-    color: #000;
-    background: #eeecec;
-    text-decoration: none;
-    margin: 15px;
-    text-align: center;
-    padding: 20px;
-    border-radius: 5px;
-
-}
+    position: absolute;
+    right: 350px;
+    top: 40px;
+  }
+  .container .profile .avatar_mobile {
+    display: none;
+  }
+  .container .Footer {
+    display: flex;
+    place-content: space-between;
+    padding-left: 0;
+  }
+  .container .Contact {
+    max-width: 50%;
+    margin: 0 auto;
+    padding-top: 40px;
+  }
+  .container .Contact form .flex_name {
+    display: flex;
+    justify-content: space-between;
+    width: 99%;
+    -moz-column-gap: 30px;
+         column-gap: 30px;
+  }
+  .container .Contact form .flex_name div {
+    width: 50%;
+  }
+}/*# sourceMappingURL=App.css.map */
