--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,6 @@ body {
   padding-bottom: 7px;
 }
 .container .Contact form input {
-  margin-bottom: 18px;
   padding: 10px;
   width: 98%;
   border: 1px solid rgba(0, 0, 0, 0.5);
@@ -101,9 +100,6 @@ body {
 }
 .container .Contact form input:focus {
   border: 1px solid #007af3;
-}
-.container .Contact form input:invalid {
-  border: 1px solid red;
 }
 .container .Contact form textarea {
   width: 100%;
@@ -115,6 +111,13 @@ body {
 }
 .container .Contact form textarea:focus {
   border: 1px solid #007af3;
+}
+.container .Contact form p {
+  margin-bottom: 5px;
+  font-size: 0.85em;
+  color: rgb(255, 0, 0);
+  line-height: 5px;
+  padding-left: 5px;
 }
 .container .Contact form ::-moz-placeholder {
   font-size: 1.1em;
