--- a/src/App.scss
+++ b/src/App.scss
@@ -110,7 +110,6 @@ body{
             }
 
             input{
-                margin-bottom: 18px;
                 padding: 10px;
                 width: 98%;
                 border: 1px solid rgb(0, 0, 0, 0.5);
@@ -119,10 +118,6 @@ body{
 
                 &:focus{
                     border: 1px solid #007af3;
-                }
-
-                &:invalid{
-                    border: 1px solid red;
                 }
             }
 
@@ -137,6 +132,14 @@ body{
                 &:focus{
                     border: 1px solid #007af3;
                 }
+            }
+            
+            p{
+                margin-bottom: 5px;
+                font-size: 0.85em;
+                color: rgb(255, 0, 0);
+                line-height: 5px;
+                padding-left: 5px;
             }
 
             ::placeholder {
